--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="Source Files\Input">
       <UniqueIdentifier>{f16fe308-9d32-4468-8db9-e5a5aca830c8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GameObjects">
+      <UniqueIdentifier>{a93e868f-7140-49fa-bb3a-bc2990bd933f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameObjects">
+      <UniqueIdentifier>{909a0b19-fa01-4791-82c7-ef4fcb867761}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.c">
@@ -29,6 +35,9 @@
     </ClCompile>
     <ClCompile Include="WaveAudio.c">
       <Filter>Source Files\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="Bird.c">
+      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -41,5 +50,21 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files\Input</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bird.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DimigoGameLast.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\Desktop\bird.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
