--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Bird.c" />
     <ClCompile Include="Camera.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="SpriteResources.c" />
     <ClCompile Include="WaveAudio.c" />
   </ItemGroup>
   <ItemGroup>
@@ -29,6 +30,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SpriteResources.h" />
     <ClInclude Include="WaveAudio.h" />
   </ItemGroup>
   <ItemGroup>
