--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="CapeChar1.c">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="CapeBackground.c">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -83,6 +86,9 @@
     <ClInclude Include="CapeChar1.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="CapeBackground.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DimigoGameLast.rc">
@@ -91,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="Resource\cape_character.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\cape_background.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
