--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="CapePlayer1.c">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="CapePlayer2.c">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -89,6 +92,9 @@
     <ClInclude Include="CapePlayer1.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="CapePlayer2.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DimigoGameLast.rc">
@@ -100,6 +106,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resource\cape_background.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\cape_player2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\cape_player1.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
