--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="CapePlayer2.c">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="Spit.c">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -95,6 +98,9 @@
     <ClInclude Include="CapePlayer2.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="Spit.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="DimigoGameLast.rc">
@@ -112,6 +118,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resource\cape_player1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\spit.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
