--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Spit.c">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
+    <ClCompile Include="GameResultScene.c">
+      <Filter>Source Files\GameScenes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -86,9 +89,6 @@
     <ClInclude Include="GameScene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CapeGameScene.h">
-      <Filter>Header Files\GameScenes</Filter>
-    </ClInclude>
     <ClInclude Include="CapeBackground.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
@@ -100,6 +100,12 @@
     </ClInclude>
     <ClInclude Include="Spit.h">
       <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="CapeGameScene.h">
+      <Filter>Header Files\GameScenes</Filter>
+    </ClInclude>
+    <ClInclude Include="GameResultScene.h">
+      <Filter>Header Files\GameScenes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +127,12 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="Resource\spit.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\player1_standing.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Resource\player1_cheering.bmp">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
