--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -171,5 +171,8 @@
     <Image Include="Resource\blow_and_avoid_help.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resource\cape_help.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
