--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="HomeScene.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="PlaneGameScene.c" />
+    <ClCompile Include="ReadyStartScene.c" />
     <ClCompile Include="Spit.c" />
     <ClCompile Include="SpriteResources.c" />
     <ClCompile Include="WaveAudio.c" />
@@ -49,6 +50,7 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="HomeScene.h" />
     <ClInclude Include="PlaneGameScene.h" />
+    <ClInclude Include="ReadyStartScene.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Spit.h" />
     <ClInclude Include="SpriteResources.h" />
