--- a/DimigoGameLast/DimigoGameLast.vcxproj
+++ b/DimigoGameLast/DimigoGameLast.vcxproj
@@ -34,6 +34,7 @@
     <ClCompile Include="Plane.c" />
     <ClCompile Include="PlaneGameScene.c" />
     <ClCompile Include="ReadyStartScene.c" />
+    <ClCompile Include="ScoreDisplay.c" />
     <ClCompile Include="Spit.c" />
     <ClCompile Include="SpriteResources.c" />
     <ClCompile Include="WaveAudio.c" />
@@ -54,6 +55,7 @@
     <ClInclude Include="PlaneGameScene.h" />
     <ClInclude Include="ReadyStartScene.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="ScoreDisplay.h" />
     <ClInclude Include="Spit.h" />
     <ClInclude Include="SpriteResources.h" />
     <ClInclude Include="WaveAudio.h" />
