--- a/DimigoGameLast/DimigoGameLast.vcxproj.filters
+++ b/DimigoGameLast/DimigoGameLast.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="BlowingPlayer.c">
       <Filter>Source Files\GameObjects\PlaneGame</Filter>
     </ClCompile>
+    <ClCompile Include="ScoreDisplay.c">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WaveAudio.h">
@@ -154,6 +157,9 @@
     </ClInclude>
     <ClInclude Include="BlowingPlayer.h">
       <Filter>Header Files\GameObjects\PlaneGame</Filter>
+    </ClInclude>
+    <ClInclude Include="ScoreDisplay.h">
+      <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
